--- a/app/views/datatools/rpg_set.html
+++ b/app/views/datatools/rpg_set.html
@@ -107,7 +107,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_position[2].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_position[2].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_position[2].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -118,7 +118,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_position[3].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_position[3].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_position[3].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -130,7 +130,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[0].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[0].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_product[0].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -141,7 +141,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[1].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[1].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_product[1].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -152,7 +152,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[2].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[2].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_product[2].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -163,7 +163,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[3].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_product[3].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_product[3].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -175,7 +175,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_others[0].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_others[0].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_others[0].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -186,7 +186,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_others[1].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_others[1].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_others[1].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -197,7 +197,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_others[2].weight" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_others[2].weight" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">{{sCtrl.rpgSetData.rentCount.affect_others[2].weight*100|number:2}}<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
@@ -208,7 +208,7 @@
 
                             <td>
                                 <div class="td-input-wrapper num-input">
-                                    <input type="text" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_count[0].value" ng-change="sCtrl.updateWeight()">
+                                    <input type="number" placeholder="/" value="" ng-model="sCtrl.rpgSetData.rentCount.affect_count[0].value" ng-change="sCtrl.updateWeight()">
                                     <span class="number-format">100<i class="unit-addon">%</i></span>
                                 </div>
                             </td>
