--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -41,6 +41,7 @@
                 </div>
             </div>
             <div class="col-xs-6"  id="datatool-sim-main-table">
+                <form name="dataSimForm">
                 <div class="" style="width:100%;">
 
                             <div class="table-wrapper">
@@ -203,15 +204,15 @@
                                         <th><span>平均租金(元/m&sup2/月)</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input" >
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.rentAvg">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.rentAvg">
                                                 <span class="number-format" >{{sCtrl.shopInfo.rentAvg|number:2}}</span>
                                             </div>
                                         </td>
                                         <th><span>免租期(月)</span></th>
                                         <td>
-                                            <div class="td-input-wrapper padding-r-15 text-input" >
-                                                <input type="text" placeholder="" value=""  ng-model="sCtrl.shopInfo.rentFree">
-                                                <!--<span class="number-format"></span>%-->
+                                            <div class="td-input-wrapper padding-r-15 num-input" >
+                                                <input type="number" placeholder="" value=""  ng-model="sCtrl.shopInfo.rentFree">
+                                                <span class="number-format" >{{sCtrl.shopInfo.rentAvg|number:0}}</span>
                                             </div>
                                         </td>
                                     </tr>
@@ -219,14 +220,14 @@
                                         <th><span>租金总计(元)</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input" >
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.rentCount">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.rentCount">
                                                 <span class="number-format">{{sCtrl.shopInfo.rentCount|number:2}}</span>
                                             </div>
                                         </td>
                                         <th><span>物管费总计(元)</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input" >
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.manageCount">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.manageCount">
                                                 <span class="number-format">{{sCtrl.shopInfo.manageCount|number:2}}</span>
                                             </div>
                                         </td>
@@ -242,7 +243,7 @@
                                         <th><span>月销售额</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input" >
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.sales">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.sales">
                                                 <span class="number-format">{{sCtrl.shopInfo.sales|number:2}}</span>
                                             </div>
                                         </td>
@@ -251,7 +252,7 @@
                                         <th><span>工程改造预算</span></th>
                                         <td>
                                             <div class="td-input-wrapper padding-r-15 num-input" >
-                                                <input type="text" placeholder="" value="" ng-model="sCtrl.shopInfo.budget">
+                                                <input type="number" placeholder="" value="" ng-model="sCtrl.shopInfo.budget">
                                                 <span class="number-format">{{sCtrl.shopInfo.budget|number:2}}</span>
                                             </div>
                                         </td>
@@ -308,7 +309,7 @@
 
                                 </div>-->
                                  <div class="btn-wrapper pull-right">
-                                    <a  class="btn btn-default amp-btn ys-tips" id="btn-go" ng-click="sCtrl.checkReturn()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">查看回报</a>
+                                    <a  class="btn btn-default amp-btn ys-tips" id="btn-go" ng-click="sCtrl.checkReturn()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用" ng-disabled="dataSimForm.$invalid">查看回报</a>
                                     <a  class="btn btn-default amp-btn amp-btn-reverse ys-tips" id="btn-dismiss" ng-click="sCtrl.dismiss()" data-toggle="tooltip" data-placement="top"  title="我们将于12月15日开放使用">解约</a>
 
 
@@ -316,6 +317,7 @@
                             </div>
                     <!--<div class="swiper-scrollbar"></div>-->
                 </div><!--swiper container-->
+                </form>
             </div>
         </div>
     </div><!--ys-block-->
