--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -398,7 +398,7 @@
             </table>
         </div>
     </div><!--ys-block-->
-    <div class="amp-block-pd clearfix">
+    <div class="amp-block-pd clearfix" style="display:none">
         <div class="amp-block-title">
             <h3 class="col-xs-4">NOI实际与方案(一、二、三)对比</h3>
         </div>
