--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="col-xs-6"  id="datatool-sim-main-table">
-                <form name="dataSimForm">
+                <form name="dataSimForm" novalidate>
                 <div class="" style="width:100%;">
 
                             <div class="table-wrapper">
