--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -460,3 +460,7 @@ tr>td span.number-format{display: block;width:100%;}
     font-size: 12px;
     line-height: 16px;
 }
+
+#compressed-info{height: 32px;
+    line-height: 32px;}
+#compressed-info>input{height: 32px; line-height: 26px; border: 0; margin-left: 6px; border-radius: 2px;  padding-left: 8px;color:#333;}
