--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -31,7 +31,8 @@
                 <div class="amp-svg-opt">
                     <h5>铺位</h5>
                     <div class="opt-block">
-                        <span class="opt-item"><em>{{sCtrl.shopInfo.shopIndex}}</em><em class="ys-icon ys-icon-cancel">×</em></span>
+                        <span class="opt-item"></span>
+                       <!-- <span class="opt-item"><em>{{sCtrl.shopInfo.shopIndex}}</em><em class="ys-icon ys-icon-cancel">×</em></span>-->
                         <!--<span class="opt-item"><em>1F 001</em><em class="ys-icon ys-icon-cancel">×</em></span>-->
                     </div>
                     <div class="btn-wrapper">
