--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -43,7 +43,7 @@
                             <em class="ys-amp-icon ys-icon-tips ys-icon-tips-hover" style="left:5px;margin-top:-11px;"></em>按住 SHIFT 键选取多个店铺合铺
                         </span>
                         <button class="btn btn-default amp-btn amp-btn-sm" id="compressed-button">合并</button>
-                        <button class="btn btn-default amp-btn amp-btn-sm amp-btn-grey" id="shop-split" style="display: none;">拆分</button>
+                        <button class="btn btn-default amp-btn amp-btn-sm amp-btn-grey" id="split-button" style="display: none;">拆分</button>
                     </div>
                 </div>
             </div>
